<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">SorobanSave</string>
    <string name="title_activity_main">SorobanSave</string>
    <string name="package_name">com.sorobansave.app</string>
    <string name="custom_url_scheme">com.sorobansave.app</string>
</resources>
